--- a/HexGL/manifest.json
+++ b/HexGL/manifest.json
@@ -8,6 +8,7 @@
   "description": "The futuristic HTML5 racing game by [Thibaut Despoulain](http://bkcore.com)",
   "version": "0.0.1",
   "icons": {
+    "128": "icon_128.png"
   },
   "permissions": [],
   "required_version": "1.29.4.0",
